--- a/02-elemente/style.css
+++ b/02-elemente/style.css
@@ -5,7 +5,7 @@ body {
   width: 100%;
   height: 100vh;
   font-size: 150px;
-  }
+}
 
 @font-face {
   font-family: SpaceMono;
@@ -17,15 +17,14 @@ a {
   font-family: "SpaceMono";
   color: #0a0a0a;
   text-align: center;
-  margin-inline: 120px;
+  margin-inline: 100px;
   text-decoration-line: none;
-  transform-origin: 0% 0%;
-  transition: transform 0.3s;
+  transform-origin: -100% 50%;
   position: absolute;
   left: 0;
-  top: 0;
-  cursor: none;
-  }
+  top: -1%;
+  font-size: 150px;
+}
 
 a:hover {
   color: #fe3200;
