--- a/04-text/style.css
+++ b/04-text/style.css
@@ -1,13 +1,11 @@
 body {
   background-color: #ebebeb;
-  /*background-color: #0a0a0a;*/
-  /*background-color: #fe3200;*/
   margin: 0%;
   padding: 0;
-  /*width: 100%;
-  height: 100vh;*/
+  width: 100%;
+  height: 100vh;
   cursor: none;
-  margin-bottom: 120px;
+  margin-bottom: 200px;
 }
 
 @font-face {
@@ -16,45 +14,31 @@ body {
   font-style: normal;
 }
 
-@font-face {
-  font-family: SpaceGrotesk;
-  src: url("../font/SpaceGrotesk-Regular.otf");
-  font-style: normal;
-}
-
 a {
   font-family: "SpaceMono";
   color: #0a0a0a;
-  text-align: center;
-  margin-inline: 120px;
+  margin-inline: 100px;
   text-decoration-line: none;
-  transform-origin: 0% 0%;
-  transition: transform 0.3s;
-  position: absolute;
-  left: 0;
-  top: 0;
-  font-size: 120px;
- }
+  position: static;
+  font-size: 150px;
+}
 
 a:hover {
   color: #fe3200;
 }
 
 h1 {
-  font-family: "SpaceMono";
-  color: #0a0a0a;;
+  font-family: 'Space Mono', monospace;
+  color: #0a0a0a;
   text-align: left;
-  margin-inline: 150px;
-  /*text-decoration-line: none;*/
-  transform-origin: 0% 0%;
-  /*transition: transform 0.3s;*/
-  position: absolute;
-  left: 0;
-  top: 120px;
-
-  font-size: 35px;
-  line-height: 120%
+  margin-inline: 100px;
+  margin-right: 100px;
+  margin-bottom: 150px;
+  position:static;
+  line-height: 120%;
+  font-size: 50px;
 }
+
 h1:hover {
   color: #fe3200;
 }
