--- a/style.css
+++ b/style.css
@@ -1,22 +1,12 @@
 body {
   background-color: #ebebeb;
   margin: 50px;
-  margin-right: -50px;
   margin-left: 65px;
-  padding: 0;
-  width: 100%;
-  height: 100vh;
   font-size: 200px;
 }
 
-@font-face {
-  font-family: SpaceMono;
-  src: url("font/SpaceMono-Regular.ttf");
-  font-style: normal;
-}
-
 a {
-  font-family: "SpaceMono";
+  font-family: 'Space Mono', monospace;
   color: #0a0a0a;
   text-align: center;
   margin-inline: 50px;
