--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
   background-color: #ebebeb;
-  margin: 50px;
-  margin-left: 65px;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
   font-size: 200px;
 }
 
