--- a/03-muster/style.css
+++ b/03-muster/style.css
@@ -16,13 +16,9 @@ body {
 a {
   font-family: "SpaceMono";
   color: #0a0a0a;
-  text-align: center;
   margin-inline: 100px;
   text-decoration-line: none;
-  transform-origin: -100% 50%;
-  position: absolute;
-  left: 0;
-  top: -1%;
+  position: static;
   font-size: 150px;
 }
 
