--- a/03-muster/style.css
+++ b/03-muster/style.css
@@ -18,7 +18,7 @@ a {
   color: #0a0a0a;
   margin-inline: 100px;
   text-decoration-line: none;
-  position: static;
+  position: absolute;
   font-size: 150px;
 }
 
