--- a/03-muster/style.css
+++ b/03-muster/style.css
@@ -17,6 +17,7 @@ a {
   font-family: "SpaceMono";
   color: #0a0a0a;
   text-align: center;
+  margin-inline: 100px;
   text-decoration-line: none;
   transform-origin: 0% 0%;
   transition: transform 0.3s;
